src/objects/Salesforce_Metrics__c.object
<CustomObject>
    <description>A record of all KPIs within a specified time span (normalized to 30 day spans, as well as MTD and QTD)</description>
    <fields>
        <fullName>Deals_Closed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of deals closed within time frame.</description>
        <label>Deals Closed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demos_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Demos Completed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demos_Scheduled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Demos Scheduled</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Metric end date of date range.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evals_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of evaluations completed in time frame.</description>
        <label>Evals Completed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evals_Started__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of evaluations started in time frame.</description>
        <label>Evals Started</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Added_N__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of pipeline deals identified in time frame.</description>
        <label>Pipeline Added (#)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Added__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of pipeline dollars added in time frame.</description>
        <label>Pipeline Added ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesforce_Metric__c</fullName>
        <description>Key value to determine which salesforce metric it is related to. 1000 is MTD and 2000 is QTD.</description>
        <label>Salesforce Metric #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of metrics time frame</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Talent_Management_File__c</fullName>
        <description>Talent Management file this set of metrics belongs to.</description>
        <label>Talent Management File</label>
        <referenceTo>Talent_Management__c</referenceTo>
        <relationshipLabel>Salesforce Metrics</relationshipLabel>
        <relationshipName>Salesforce_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Bookings__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount closed within metrics time frame</description>
        <label>Total Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Safe_ID__c</fullName>
        <formula>Talent_Management_File__r.User_Safe_ID__c</formula>
        <label>User Safe ID</label>
        <type>Text</type>
    </fields>
    <label>Salesforce Metrics</label>
    <nameField>
        <label>Salesforce Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Metrics</pluralLabel>
    <recordTypes>
        <fullName>Enterprise_Metrics</fullName>
        <active>true</active>
        <label>Enterprise Metrics</label>
    </recordTypes>
    <recordTypes>
        <fullName>MTD</fullName>
        <active>true</active>
        <label>MTD</label>
    </recordTypes>
    <recordTypes>
        <fullName>QTD</fullName>
        <active>true</active>
        <label>QTD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Development_Metrics</fullName>
        <active>true</active>
        <label>Sales Development Metrics</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Ops_Special_Can_Create</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW(),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>Only admins can create new Talent Management records</errorMessage>
    </validationRules>
</CustomObject>